# radiation-testing-framework

./: .gitignore  .gitmodules  README.md  configure  run.sh
framework/: CMakeLists.txt
framework/configs/: all.ini
framework/include/: event_handler.h  event_types.h  logger.h  rad_logger.h
framework/src/bpf/: aer_monitor.bpf.c  arm_monitor.bpf.c  cpu_monitor.bpf.c  cuda_monitor.bpf.c  inferencetime_monitor.bpf.c  mc_monitor.bpf.c  mem_monitor.bpf.c  nse_monitor.bpf.c  storage_monitor.bpf.c  uprobe_monitor.bpf.c
framework/src/logger/: can.c  file.c  logger.c  stdout.c  uart.c
framework/src/user/: aer_event_handler.c  arm_event_handler.c  cpu_event_handler.c  cuda_event_handler.c  event_handler.c  inferencetime_event_handler.c  main.c  mc_event_handler.c  mem_event_handler.c  ns_event_handler.c  storage_event_handler.c  uprobe_event_handler.c
framework/src/user_logger/: README.md  rad_logger.c
framework/src/user_logger/python/: rad_logger_pybind.cpp  setup.py
user_test/: CMakeLists.txt  rad_logger_test.c  test.py
